--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,14 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	// the repository for iPortal
+	maven { url 'https://jitpack.io' }
+
+	// the repository for Cloth Config
+	maven { url 'https://maven.shedaniel.me' }
+	maven {
+		url = "https://api.modrinth.com/maven"
+	}
 }
 
 fabricApi {
@@ -32,7 +40,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	//Immersive Portals
+	modImplementation ("com.github.iPortalTeam:ImmersivePortalsMod:v6.0.6-mc1.21.1")
+
 }
 
 processResources {
