--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ hs_err_*.log
 replay_*.log
 *.hprof
 *.jfr
+/src/main/generated/.cache/
+/src/main/generated/.cache/1fd4aeb01987a3e5bd729605305d75bae4028f9c
+/src/main/generated/.cache/69cfa5bf529fa27479810434dccce4d7875788e2
+/src/main/generated/.cache/856aae05383d2e234f06c08c8f7bae35ac08af0d
